--- a/404.md
+++ b/404.md
@@ -2,6 +2,7 @@
 layout: page
 title: "Page Not Found"
 description: "Page not found. Your pixels are in another canvas."
+permalink: /404.html
 sitemap: false
 ---  
 
