--- a/404.md
+++ b/404.md
@@ -4,9 +4,11 @@ title: "Page Not Found"
 description: "Page not found. Your pixels are in another canvas."
 permalink: /404.html
 sitemap: false
----  
 
+---  
+<p style="font-family:verdana;font-size:12px;color:black">
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+</p>
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
