[Article] Update article 2015-04-07-mydumper

--- a/_posts/MySQL/2015-04-07-mydumper.md
+++ b/_posts/MySQL/2015-04-07-mydumper.md
@@ -157,6 +157,8 @@ Query OK, 0 rows affected (0.07 sec)
     $ du -sh export-20150407-151811/
     1.8M    export-20150407-151811/
 
+最后，更多参数可以通过 `mydumper --help` 获取。
+
 Enjoy!
 
 ## 四 参考资料 ##
