[Article] Update article summary

--- a/_posts/MySQL/2015-04-07-mydumper.md
+++ b/_posts/MySQL/2015-04-07-mydumper.md
@@ -4,7 +4,7 @@ author: Robin Wen
 layout: post
 title: "mydumper 完全参考手册"
 category: MySQL
-summary: "mysqldump 相信大家已经耳熟能详，相比 mysqldump，mydumper 具有如下优势：多线程、高性能。仅凭多线程这一点就可以让你对 mydumper 爱不释手。mydumper 最新稳定版是 0.6.2，读者可以从[这里](https://launchpad.net/mydumper)下载到。本文讲解怎么编译安装 mydumper，以及怎么使用它。看完此文，相信大家会对 mydumper 有较全面的了解。"
+summary: "mysqldump 相信大家已经耳熟能详，相比 mysqldump，mydumper 具有如下优势：多线程、高性能。仅凭多线程这一点就可以让你对 mydumper 爱不释手。mydumper 最新稳定版是 0.6.2，读者可以从 Launchpad 下载到。本文讲解怎么编译安装 mydumper，以及怎么使用它。看完此文，相信大家会对 mydumper 有较全面的了解。"
 tags: 
 - MySQL
 - mydumper
