[Article] Add summary of article

--- a/_posts/Other/2015-07-04-mbp.md
+++ b/_posts/Other/2015-07-04-mbp.md
@@ -4,7 +4,7 @@ author: Robin Wen
 layout: post
 title: "人生第一台 MBP"
 category: Other
-summary: ""
+summary: "我相信，拥有一台 Mac，是每个 IT 从业者深藏在心的梦。宁静的夜，絮絮的风，一杯咖啡，一首好歌，一台 Mac，独自码着代码抑或文字，指间滑过细腻的键盘，面带悦色，心中欢喜不二。再者，倘若来到一片草原，一望无垠，天上的星星眨着眼睛，月色喜人，在广袤的大地和美轮美奂的星空之间，美梦中怀里抱着 Mac，外加 HHKB，醒来会发现嘴边洋溢的浅笑。这个时代，真正认可的，一定是靠谱的人，靠谱的物。用心做事，用心做人，不愁没人发现。"
 tags: 
 - Other
 - Apple
