[Article] Add imag copyright info

--- a/_posts/Other/2017-08-30-time.md
+++ b/_posts/Other/2017-08-30-time.md
@@ -21,6 +21,8 @@ tags:
 
 ![The Great Wave off Kanagawa](http://i.imgur.com/kC1Xh3H.jpg)
 
+© Kanagawa oki nami-ura / The Great Wave off Kanagawa / wikipedia.org
+
 本文探讨的是，如何高效利用时间。高效利用时间用到的工具，主要分为三类。第一是记录时间，第二是安排时间，第三是时间效率。讲完这三类，笔者再对信息源进行梳理，以及分享自己的经验。
 
 把事情按照 **重要和紧急** 两个维度分为四象限，这是高效利用时间很重要的一点。具体实施可以参考如下原则：
