--- a/_posts/想法/2014-01-04-take-easy.md
+++ b/_posts/想法/2014-01-04-take-easy.md
@@ -3,7 +3,7 @@ published: true
 author: Robin Wen
 layout: post
 title: "慢慢来，不着急"
-category: Other
+category: 想法
 summary: "《论语·子路》中说到：「无欲速，无见小利。欲速则不达，见小利则大事不成」。你越想完成一件事，往往是达不到自己的目标的。比如追女生，你越心切，越追不到，女生会觉得你轻浮不成熟；比如跑步，你越想冲到终点，往往会觉得终点会如此的遥远。欲速则不达的例子还有很多，如果你反思你的生活，你一定会感同身受。如果我们以一颗平和的心态，转移势必达到目标的注意力，凡事尽心尽力，不带奢望，不求最好，不骄不躁，那所有的结果就是惊喜了。"
 tags: 
 - Other
