[Article] Change category

--- a/_posts/想法/2015-07-04-mbp.md
+++ b/_posts/想法/2015-07-04-mbp.md
@@ -3,7 +3,7 @@ published: true
 author: Robin Wen
 layout: post
 title: 人生第一台 MBP
-category: Other
+category: 想法
 summary: >-
   我相信，拥有一台 Mac，是每个 IT 从业者深藏在心的梦。宁静的夜，絮絮的风，一杯咖啡，一首好歌，一台
   Mac，独自码着代码抑或文字，指间滑过细腻的键盘，面带悦色，心中欢喜不二。再者，倘若来到一片草原，一望无垠，天上的星星眨着眼睛，月色喜人，在广袤的大地和美轮美奂的星空之间，美梦中怀里抱着
