--- a/_posts/数据库/2016-09-24-bi-scheme.md
+++ b/_posts/数据库/2016-09-24-bi-scheme.md
@@ -3,7 +3,7 @@ published: true
 author: Robin Wen
 layout: post
 title: 大数据方案选型
-category: Other
+category: 数据库
 summary: >-
   A 业务日增 1500W 数据，采用 MySQL
   分区存储。该分区表按照时间分区，每天一个分区。随着时间的推移，单表数据越来越多，占用空间越来越大，由此带来如下的不便：第一，单机磁盘容量有限，需要定期清理历史数据；第二，MySQL
