--- a/_posts/想法/2017-08-30-time.md
+++ b/_posts/想法/2017-08-30-time.md
@@ -3,7 +3,7 @@ published: true
 author: Robin Wen
 layout: post
 title: "时间"
-category: Other
+category: 想法
 summary: "想了半天标题，不知如何是好。时间管理这个主题提及次数太多，道和术也太多，然而找到适合自己的才是最好的。回到问题本身，我们来谈谈时间。时间这个概念理解起来非常复杂。时间是什么？时间是左手腕上手表、墙上挂钟的滴答循环？时间是屏幕上的数字跳跃？时间是沙漏里沙子的流淌？在笔者看来，这些都只是时间的表现形式，是我们人类这样定义时间，赋予时间这样的意义。时间是个相对概念，我们靠万物生长、朝夕日落来感受时间的存在，另外一个不争的事实，我们都在老去。当我们无视时间，感受不到时间的存在，这就是「心流」。一切管理，归根结底都是对自我的管理，工具再多再好也只是辅助。"
 tags:
 - 时间
