[Article] Change tag

--- a/_posts/回忆录/2013-05-10-parents.md
+++ b/_posts/回忆录/2013-05-10-parents.md
@@ -6,11 +6,8 @@ title: "程序员的奋斗史（十七）父母"
 category: 回忆录
 summary: "树欲静而风不止，子欲养而亲不待。世间有几样东西不能等，易逝的时间，孝敬父母的心，邂逅的爱情。"
 tags: 
-- Other
-- 程序员的奋斗史
-- Fighting
-- 父母
-- 孝敬
+- 程序员
+- 想法
 ---
 
 `文/温国兵`
