[Article] Change tag

--- a/_posts/回忆录/2013-05-01-habits.md
+++ b/_posts/回忆录/2013-05-01-habits.md
@@ -4,11 +4,8 @@ title: "程序员的奋斗史（十六）谈习惯"
 category: 回忆录
 summary: "习惯能决定你能所取得怎样的成就。稍微想一想每一年各个省的高考状元，当采访他们为什么能取得这样的成绩时无不谈到自己的好习惯。好的习惯一旦养成，就能成为你生活的一部分，融入，生根。常言道习惯成自然就是这个道理。"
 tags: 
-- Other
-- 程序员的奋斗史
-- Fighting
-- 习惯
-- Habits
+- 程序员
+- 想法
 ---
 
 `文/温国兵`
