[Article] Change tag

--- a/_posts/回忆录/2013-03-21-attitude.md
+++ b/_posts/回忆录/2013-03-21-attitude.md
@@ -6,10 +6,8 @@ title: "程序员的奋斗史（十四）谈态度"
 category: 回忆录
 summary: "身边不乏因态度不端正而错失良机、做糟事情、伤及他人的例子。当做错了才知道后悔，那当初为什么不好好的把握。人生没有后悔药，既知如此，何必当初。凡事三思而后行，不要因为自己的态度不好而让人生留下遗憾。"
 tags: 
-- Other
-- 程序员的奋斗史
-- Fighting
-- 态度
+- 程序员
+- 想法
 ---
 
 `文/温国兵`
