[Article] Change tag

--- a/_posts/回忆录/2013-02-01-faith.md
+++ b/_posts/回忆录/2013-02-01-faith.md
@@ -6,11 +6,8 @@ title: "程序员的奋斗史（十二）谈信念"
 category: 回忆录
 summary: "信念的高度决定人生的高度。你的思想有多远，你就能走多远。大凡有成就的人都是有坚定的信念，相信自己能做到。"
 tags: 
-- Other
-- 程序员的奋斗史
-- Fighting
-- 信念
-- Faith
+- 程序员
+- 想法
 ---
 
 `文/温国兵`
