[Article] Change tag

--- a/_posts/数据库/2016-09-24-bi-scheme.md
+++ b/_posts/数据库/2016-09-24-bi-scheme.md
@@ -9,8 +9,11 @@ summary: >-
   分区存储。该分区表按照时间分区，每天一个分区。随着时间的推移，单表数据越来越多，占用空间越来越大，由此带来如下的不便：第一，单机磁盘容量有限，需要定期清理历史数据；第二，MySQL
   对子查询、复杂查询支持不友好，在庞大的数据量下性能急剧下降，导致前端报表得出结果延时。为了永久存储数据，并且提升查询性能，便有了如下的技术方案选型。确定一个方案是否可行，有很多维度，比如：读写性能、数据可用性、改造成本、场景匹配度、机器成本、运维成本、系统容错性、高可用能力、横向扩展能力等等。重要的一点是，给出的测试报告要用数据说服别人，其中测试的维度设计就是需要下功夫的地方。由于应用场景复杂多变，很难找到一个通用的解决方案。某一个解决方案只能无限趋近特定的需求，某些功能很有可能需要定制。也就是说，一个大数据团队的研发能力也就决定了对业务需求的掌控能力。
 tags:
-  - BI
-  - 大数据
+- 数据库
+- Database
+- BI
+- 大数据
+- BigData
 comments:
   - author:
       type: github
