--- a/_posts/数据库/2015-04-07-mydumper.md
+++ b/_posts/数据库/2015-04-07-mydumper.md
@@ -6,9 +6,9 @@ title: "mydumper 完全参考手册"
 category: 数据库
 summary: "mysqldump 相信大家已经耳熟能详，相比 mysqldump，mydumper 具有如下优势：多线程、高性能。仅凭多线程这一点就可以让你对 mydumper 爱不释手。mydumper 最新稳定版是 0.6.2，读者可以从 Launchpad 下载到。本文讲解怎么编译安装 mydumper，以及怎么使用它。看完此文，相信大家会对 mydumper 有较全面的了解。"
 tags: 
+- 数据库
+- Database
 - MySQL
-- mydumper
-- 备份与恢复
 ---
 
 ## 目录 ##
