[Article] Add sero cash

--- a/_posts/区块链/2019-01-20-sero-cash.md
+++ b/_posts/区块链/2019-01-20-sero-cash.md
@@ -4,7 +4,7 @@ author: Robin Wen
 layout: post
 title: 匿名货币 2.0 SERO
 category: 区块链
-summary: 最近 Grin 和 Beam 引起了广泛地关注，匿名货币好似迎来又一个春天，然而本文介绍的 SERO，看似不温不火，实则潜力巨大。说到匿名，我们不得不谈及隐私。隐私和匿名是两个概念，隐私是指个人人格上的利益不受不法僭用或侵害，而匿名，是一种不具名或使用化名的行为，相对于具真实身份的行为。匿名目的是不想表露自己身份，或者因为多种原因身份/特征不明。匿名可以是保护隐私的一种手段，但对于互联网来说，不是全部。最后，贴一下 SERO 发的公告，希望有眼光的读者也能参与其中。
+summary: 最近 Grin 和 Beam 引起了广泛地关注，匿名货币好似迎来又一个春天，然而本文介绍的 SERO，看似不温不火，实则潜力巨大。说到匿名，我们不得不谈及隐私。隐私和匿名是两个概念，隐私是指个人人格上的利益不受不法僭用或侵害，而匿名，是一种不具名或使用化名的行为，相对于具真实身份的行为。匿名目的是不想表露自己身份，或者因为多种原因身份/特征不明。匿名可以是保护隐私的一种手段，但对于互联网来说，不是全部。最后，贴一下 SERO 发的公告，希望有眼光的读者也能参与其中。此外，SERO 网站有教程，域名非常好记（sero.cash）。
 tags:
   - 区块链
   - Blockchain
