[Resource] Change imgur to custom image hosting service

--- a/_posts/区块链/2019-03-03-forkit.md
+++ b/_posts/区块链/2019-03-03-forkit.md
@@ -19,7 +19,7 @@ tags:
 
 笔者一直对播客情有独钟。播客是通勤以及不方便看手机时刻的最佳搭档，播客已经是生活中必不可少的一部分。
 
-![](https://i.imgur.com/fvbv8pO.jpg)
+![](https://cdn.wenguobing.com/fvbv8pO.jpg)
 
 > 题图来自: © Fork It / Fork It - Episodes Tagged with “blockchain” / fireside.fm
 
@@ -37,7 +37,7 @@ Fork It，网址 [https://forkit.fm](https://forkit.fm)，支持 [RSS](https://f
 
 「区块链技术指北」同名 **知识星球**，二维码如下，欢迎加入。
 
-![区块链技术指北](https://i.imgur.com/RBmpxTL.jpg)
+![区块链技术指北](https://cdn.wenguobing.com/RBmpxTL.jpg)
 
 「区块链技术指北」相关资讯渠道：
 
@@ -70,7 +70,7 @@ Fork It，网址 [https://forkit.fm](https://forkit.fm)，支持 [RSS](https://f
 > PayPal: [https://www.paypal.me/robinwen](https://www.paypal.me/robinwen)
 > 微信打赏二维码
 
-![Wechat](https://i.imgur.com/SzoNl5b.jpg)
+![Wechat](https://cdn.wenguobing.com/SzoNl5b.jpg)
 
 –EOF–
 
