[Article] Add Summary of 2019

--- a/_posts/想法/2019-12-31-summary-of-2019.md
+++ b/_posts/想法/2019-12-31-summary-of-2019.md
@@ -16,7 +16,7 @@ tags:
 
 今年最大的变化就是因为工作上的变动，从生活了五年的广州举家搬到了深圳。到了深圳这大半年，到还顺利，一举实现了好几个目标。深圳和广州这两个城市很有意思，前者在急速发展注重效率，后者更富生活气息和稳重包容。
 
-2019 年作为合伙人加入 Exin 团队。从 2018 年开始算起，个人全职在区块链行业也快 2 年了。2018 年底低迷不振的气息延续到 2019 年，dApp 曾经的繁荣生态也停滞不前，众多公链画下的大饼已经不再具有投资吸引力。2019 年 Libra 诞生，DeFi、Staking 等概念有了一些落地，跨链成为区块链的焦点，主流交易所提供的能力趋同。10 月 24 日，习大大在中央政治局第十八次集体学习时强调把区块链作为核心技术自主创新重要突破口，加快推动区块链技术和产业创新发展。一时之间，行业内外为之振奋。然而，区块链依然离 Mass Adoption 似远似近。
+2019 年作为合伙人加入 Exin 团队。从 2018 年开始算起，个人全职在区块链行业也快 2 年了。2018 年底低迷不振的气息延续到 2019 年，dApp 曾经的繁荣生态也停滞不前，众多公链画下的大饼已经不再具有投资吸引力。2019 年 Libra 诞生，DeFi、Staking 等概念有了一些落地，跨链成为区块链的焦点，主流交易所提供的能力趋同。10 月 24 日，习大大在中央政治局第十八次集体学习时强调把区块链作为核心技术自主创新重要突破口，加快推动区块链技术和产业创新发展。一时之间，行业内外为之振奋。然而，区块链依然离 **Mass Adoption** 似远似近。
 
 身边的人知道我从事区块链行业，经常问我买了什么币，买了多少，比特币不会是传销吧等等，可见偏见依然存在，普及之路尚远。总之我的原则就是不向身边的人推荐买任何币，每个人的风险承受能力不同，大多数人也没有建立有体系的投资准则。
 
@@ -32,7 +32,7 @@ tags:
 
 > © Vincent van Gogh / The Starry Night, 1889 / Wikipedia
 
-「有偏见的地方，就有信息不对称，就有机会」。但是往往赚不到超过你认知以外的钱，有句话叫做「凭运气赚的钱，凭本事亏出去」，知道你的能力圈也很重要。2020 年希望自己能在自己的能力圈内，把事情做到极致，顺道享受行业带来的红利。2020 年不给自己立太多的 Flag，好几个 Side Project 在酝酿中了，希望到时能和大家分享。此外，不管是工作还是个人，尽可能地聚焦，把精力花在尽量少的事情上。做对一件事往往比做了一百件重要得多。
+「**有偏见的地方，就有信息不对称，就有机会**」。但是往往赚不到超过你认知以外的钱，有句话叫做「凭运气赚的钱，凭本事亏出去」，知道你的能力圈也很重要。2020 年希望自己能在自己的能力圈内，把事情做到极致，顺道享受行业带来的红利。2020 年不给自己立太多的 Flag，好几个 Side Project 在酝酿中了，希望到时能和大家分享。此外，不管是工作还是个人，尽可能地聚焦，把精力花在尽量少的事情上。做对一件事往往比做了一百件重要得多。
 
 最后，2019 年的最后一天，得到「时间的朋友」跨年演讲依然继续，今年多了个「区块链的朋友」跨年分享，大家可以关注下。PS：本文在多个跨年分享中完成，文章发表出来，演讲依然还在继续吧。祝大家新年快乐！
 
