[Article] Fix typo

--- a/_posts/想法/2019-12-31-summary-of-2019.md
+++ b/_posts/想法/2019-12-31-summary-of-2019.md
@@ -4,7 +4,7 @@ author: Robin Wen
 layout: post
 title: "2019 这一年"
 category: 想法
-summary: "今天是 2019 年的最后一天，往回看这一年，感慨万千。今年最大的变化就是因为工作上的变动，从生活了五年的广州举家搬到了深圳。到了深圳这大半年，到还顺利，一举实现了好几个目标。深圳和广州这两个城市很有意思，前者在急速发展注重效率，后者更富生活气息和稳重包容。最后，2019 年的最后一天，得到「时间的朋友」跨年演讲依然继续，今年多了个「区块链的朋友」跨年分享，大家可以关注下。PS：本文在多个跨年分享中完成，文章发表出来，演讲依然还在继续吧。祝大家新年快乐！"
+summary: "今天是 2019 年的最后一天，往回看这一年，感慨万千。今年最大的变化就是因为工作上的变动，从生活了五年的广州举家搬到了深圳。到了深圳这大半年，倒还顺利，一举实现了好几个目标。深圳和广州这两个城市很有意思，前者在急速发展注重效率，后者更富生活气息和稳重包容。最后，2019 年的最后一天，得到「时间的朋友」跨年演讲依然继续，今年多了个「区块链的朋友」跨年分享，大家可以关注下。PS：本文在多个跨年分享中完成，文章发表出来，演讲依然还在继续吧。祝大家新年快乐！"
 tags:
 - 想法
 - 年终总结
@@ -14,7 +14,7 @@ tags:
 
 今天是 2019 年的最后一天，往回看这一年，感慨万千。
 
-今年最大的变化就是因为工作上的变动，从生活了五年的广州举家搬到了深圳。到了深圳这大半年，到还顺利，一举实现了好几个目标。深圳和广州这两个城市很有意思，前者在急速发展注重效率，后者更富生活气息和稳重包容。
+今年最大的变化就是因为工作上的变动，从生活了五年的广州举家搬到了深圳。到了深圳这大半年，倒还顺利，一举实现了好几个目标。深圳和广州这两个城市很有意思，前者在急速发展注重效率，后者更富生活气息和稳重包容。
 
 2019 年作为合伙人加入 Exin 团队。从 2018 年开始算起，个人全职在区块链行业也快 2 年了。2018 年底低迷不振的气息延续到 2019 年，dApp 曾经的繁荣生态也停滞不前，众多公链画下的大饼已经不再具有投资吸引力。2019 年 Libra 诞生，DeFi、Staking 等概念有了一些落地，跨链成为区块链的焦点，主流交易所提供的能力趋同。10 月 24 日，习近平在中央政治局第十八次集体学习时强调把区块链作为核心技术自主创新重要突破口，加快推动区块链技术和产业创新发展。一时之间，行业内外为之振奋。然而，区块链依然离 **Mass Adoption** 似远似近。
 
