Add binance promotion

--- a/_posts/区块链/2019-03-03-forkit.md
+++ b/_posts/区块链/2019-03-03-forkit.md
@@ -15,6 +15,17 @@ tags:
 
 这是「区块链技术指北」的第 **46** 篇文章。
 
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
+
 > 如果对我感兴趣，想和我交流，我的微信号：**Wentasy**，加我时简单介绍下自己，并注明来自「区块链技术指北」，同时我会把你拉入微信群。
 
 笔者一直对播客情有独钟。播客是通勤以及不方便看手机时刻的最佳搭档，播客已经是生活中必不可少的一部分。
@@ -34,6 +45,17 @@ tags:
 Fork It，网址 [https://forkit.fm](https://forkit.fm)，支持 [RSS](https://forkit.fm/rss)、[Apple Podcasts](https://itunes.apple.com/cn/podcast/fork-it/id1440578671)、[Pocket Casts](https://pca.st/Ko7Z) 和 [Castro](https://castro.fm/podcast/c1368c71-6871-4d8e-8860-a154db765bf8)。BTW，笔者在使用 Castro。
 
 **Let's Fork It!**
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 「区块链技术指北」同名 **知识星球**，二维码如下，欢迎加入。
 
