--- a/_posts/区块链/2019-01-20-sero-cash.md
+++ b/_posts/区块链/2019-01-20-sero-cash.md
@@ -15,6 +15,17 @@ tags:
 
 这是「区块链技术指北」的第 **44** 篇文章。
 
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
+
 > 如果对我感兴趣，想和我交流，我的微信号：**Wentasy**，加我时简单介绍下自己，并注明来自「区块链技术指北」，同时我会把你拉入微信群。
 
 ![](https://cdn.dbarobin.com/jG0sSFh.png)
@@ -50,6 +61,17 @@ tags:
 最后，贴一下 SERO 发的公告，希望有眼光的读者也能参与其中。此外，SERO 网站有教程，域名非常好记（**[sero.cash](https://sero.cash)**）。
 
 > SERO 全民挖矿已火爆开启！SERO 支持 CPU 挖矿，只要在自己的电脑上运行 SERO 钱包或 gero 代码，就可以轻松获得 SERO 代币，同时支持 Windows/Mac/Linux 系统；根据 SERO 官方公布的信息，SERO 采用独创的 ethash 修改版 + 去中心化匿名 license 共识机制，在小算力出现重大灾难时，可以保证 SERO 公链的稳定性，保障初期矿工的权益！
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 「区块链技术指北」同名 **知识星球**，二维码如下，欢迎加入。
 
