Add binance promotion

--- a/_posts/想法/2014-01-04-take-easy.md
+++ b/_posts/想法/2014-01-04-take-easy.md
@@ -5,11 +5,22 @@ layout: post
 title: "慢慢来，不着急"
 category: 想法
 summary: "《论语·子路》中说到：「无欲速，无见小利。欲速则不达，见小利则大事不成」。你越想完成一件事，往往是达不到自己的目标的。比如追女生，你越心切，越追不到，女生会觉得你轻浮不成熟；比如跑步，你越想冲到终点，往往会觉得终点会如此的遥远。欲速则不达的例子还有很多，如果你反思你的生活，你一定会感同身受。如果我们以一颗平和的心态，转移势必达到目标的注意力，凡事尽心尽力，不带奢望，不求最好，不骄不躁，那所有的结果就是惊喜了。"
-tags: 
+tags:
 - 想法
 ---
 
 `文/robin`
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 我是一个性急之人，比较积极，遇到事情希望尽快解决。经过一次又一次的教训后，才明白“欲速则不达”的深刻含义。
 
@@ -24,6 +35,17 @@ tags:
 《论语·子路》中说到：**「无欲速，无见小利。欲速则不达，见小利则大事不成」**。你越想完成一件事，往往是达不到自己的目标的。比如追女生，你越心切，越追不到，女生会觉得你轻浮不成熟；比如跑步，你越想冲到终点，往往会觉得终点会如此的遥远。欲速则不达的例子还有很多，如果你反思你的生活，你一定会感同身受。如果我们以一颗平和的心态，转移势必达到目标的注意力，凡事尽心尽力，不带奢望，不求最好，不骄不躁，那所有的结果就是惊喜了。
 
 引用一句很喜欢的话，**「因上努力，果上随缘」**。慢慢来，不着急。
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 –EOF–
 
