--- a/_posts/想法/2017-01-24-summary-of-2016.md
+++ b/_posts/想法/2017-01-24-summary-of-2016.md
@@ -12,6 +12,17 @@ tags:
 
 `文/robin`
 
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
+
 2017 年 1 月的尾巴即将到来，2016 年的总结似乎来得晚了一些。2016 年这一年很不平凡，看待世界的角度也变得很不一样。26 岁一过，离三十而立又更近了一步，肩上的担子也越来越重。
 
 **2016 年是技术不断深入、工作不断成熟的一年。**这一年参与了酷狗不少项目，对于工程的理解又上了一个层次。DBA 这个职位更像传统行业，而不是互联网行业。DBA 更多的是工程问题，而不是技术问题。同时，意识到 DBA 存在瓶颈。第一，DBA 这个行业，只有当公司的用户量达到一定量级，也就是只有在中大型公司才能得到高质量和快速的提升。然而，中大型公司数量有限，招聘的名额也有限，怎样在激烈竞争中脱颖而出，关键在于你的核心竞争力，你要说服别人凭什么聘用你。第二，DBA 更多的是资源消耗和资源维稳，而不是成果产出。KPI 更多的是看到成效，而不是运维了多少 DB。同一件事做千万遍，产出有可能相当低；假如能做出产品，自动化也好，数据层产品也好，这才是 DBA 的成效。第三，DBA 经常会陷入使用产品的怪圈，然而对一个产品了如指掌，这是有壁垒的。源码、计算机网络、操作系统、数据结构、计算机组成原理，这些计算机本质的知识是不可或缺的。一个 DBA 值多少钱，不是完全看他运维过多少 DB、有多少年工作经验，而是看他思考问题的角度、解决问题的思路、潜在的提升空间。运维的操作可以 Google，可以看官方文档，但一个人脑子里的东西是学不来的。
@@ -31,6 +42,17 @@ tags:
 2016 年发生的一件事，让我对很多问题有了新的认识和思考。人啊，还是活得清楚一些。另外，对创造这个词的理解又不一样。**三流的人才 Do nothing，二流的人才 Do things，一流的人才 Make things happen。**关于创造，2017 年有了更多的计划。世界在不断地变化中，技术的变革也超乎人的想象，而我，**追求的是有爱的生活。**
 
 西部世界里 Dolores 有句台词：「 Some people choose to see the ugliness in this world, the disarray. I choose to see the beauty.」终其一生，我们都在做一件事：**在无穷的不确定性中，分辨美和丑，将无序变为有序。**
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 –EOF–
 
