--- a/_posts/想法/2017-08-30-time.md
+++ b/_posts/想法/2017-08-30-time.md
@@ -12,6 +12,17 @@ tags:
 
 `文/robin`
 
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
+
 想了半天标题，不知如何是好。时间管理这个主题提及次数太多，道和术也太多，然而找到适合自己的才是最好的。回到问题本身，我们来谈谈时间。
 
 按照维基百科 [^1] 的定义：
@@ -57,6 +68,17 @@ tags:
 以上信息源，笔者基本不会每时每刻阅读，比如笔者会每天看一次朋友圈和 Telegram Channel，每周一到两次批量阅读微信公众号和 RSS 订阅文章。社交软件切忌高频使用，否则这是导致低效的重要原因。RSS 阅读笔者使用 Reeder，到目前为止，RSS 依然是笔者最喜欢的阅读方式，这种沉浸式阅读很是享受。Telegram 上有不少有趣的 Channel，当然，你需要用点工夫才能自由地使用。GitHub 上更有海量的高质量资源，也是一种不错的信息获取方式。目前即刻的使用频率降低，反倒是 Readhub 深深地吸引了我。专注的根本，就是要降噪，比如 Mac、iOS 尽可能多地关闭消息通知，不要让烦人的推送让你分心。另外，微信、邮件、Telegram 秒回，也是一种低效的行为，这方面笔者做得也不太好，需要改善。
 
 一切管理，归根结底都是对自我的管理，工具再多再好也只是辅助。
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 [^1]: [时间](https://zh.wikipedia.org/wiki/时间)
 [^2]: [心流理论](https://zh.wikipedia.org/wiki/心流理论)
