--- a/_posts/想法/2019-12-31-summary-of-2019.md
+++ b/_posts/想法/2019-12-31-summary-of-2019.md
@@ -12,6 +12,17 @@ tags:
 
 `文/robin`
 
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
+
 今天是 2019 年的最后一天，往回看这一年，感慨万千。
 
 今年最大的变化就是因为工作上的变动，从生活了五年的广州举家搬到了深圳。到了深圳这大半年，倒还顺利，一举实现了好几个目标。深圳和广州这两个城市很有意思，前者在急速发展注重效率，后者更富生活气息和稳重包容。
@@ -35,6 +46,17 @@ tags:
 「**有偏见的地方，就有信息不对称，就有机会**」。但是往往赚不到超过你认知以外的钱，有句话叫做「凭运气赚的钱，凭本事亏出去」，知道你的能力圈也很重要。2020 年希望自己能在自己的能力圈内，把事情做到极致，顺道享受行业带来的红利。2020 年不给自己立太多的 Flag，好几个 Side Project 在酝酿中了，希望到时能和大家分享。此外，不管是工作还是个人，尽可能地聚焦，把精力花在尽量少的事情上。做对一件事往往比做了一百件重要得多。
 
 最后，2019 年的最后一天，得到「时间的朋友」跨年演讲依然继续，今年多了个「区块链的朋友」跨年分享，大家可以关注下。PS：本文在多个跨年分享中完成，文章发表出来，演讲依然还在继续吧。祝大家新年快乐！
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 ***
 
