Add binance promotion

--- a/_posts/数据库/2015-04-07-mydumper.md
+++ b/_posts/数据库/2015-04-07-mydumper.md
@@ -18,6 +18,17 @@ tags:
 
 `文/robin`
 
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
+
 ## 一 引子 ##
 ***
 
@@ -157,6 +168,17 @@ Query OK, 0 rows affected (0.07 sec)
     1.8M    export-20150407-151811/
 
 最后，更多参数可以通过 `mydumper --help` 获取。
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 Enjoy!
 
