Add binance promotion

--- a/_posts/程序员/2013-02-01-faith.md
+++ b/_posts/程序员/2013-02-01-faith.md
@@ -5,7 +5,7 @@ layout: post
 title: "程序员的奋斗史（十二）谈信念"
 category: 程序员
 summary: "信念的高度决定人生的高度。你的思想有多远，你就能走多远。大凡有成就的人都是有坚定的信念，相信自己能做到。"
-tags: 
+tags:
 - 程序员
 - 想法
 ---
@@ -23,6 +23,17 @@ tags:
 藏族人有着坚定的宗教信仰，对自己的信仰抱着最虔诚的态度，因此藏传佛教受到很多人的膜拜、尊敬、信奉和赞崇。一个人因为有着坚定的信念和坚持不懈的努力而受人尊敬和赞赏。
 
 信念的高度决定人生的高度。**你的思想有多远，你就能走多远。**大凡有成就的人都是有坚定的信念，相信自己能做到。
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 –EOF–
 
