--- a/_posts/程序员/2013-03-21-attitude.md
+++ b/_posts/程序员/2013-03-21-attitude.md
@@ -5,7 +5,7 @@ layout: post
 title: "程序员的奋斗史（十四）谈态度"
 category: 程序员
 summary: "身边不乏因态度不端正而错失良机、做糟事情、伤及他人的例子。当做错了才知道后悔，那当初为什么不好好的把握。人生没有后悔药，既知如此，何必当初。凡事三思而后行，不要因为自己的态度不好而让人生留下遗憾。"
-tags: 
+tags:
 - 程序员
 - 想法
 ---
@@ -23,6 +23,17 @@ tags:
 身边不乏因态度不端正而错失良机、做糟事情、伤及他人的例子。当做错了才知道后悔，那当初为什么不好好的把握。人生没有后悔药，既知如此，何必当初。凡事三思而后行，不要因为自己的态度不好而让人生留下遗憾。
 
 **态度，事之所向。**
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 –EOF–
 
