--- a/_posts/程序员/2013-05-01-habits.md
+++ b/_posts/程序员/2013-05-01-habits.md
@@ -3,7 +3,7 @@ layout: post
 title: "程序员的奋斗史（十六）谈习惯"
 category: 程序员
 summary: "习惯能决定你能所取得怎样的成就。稍微想一想每一年各个省的高考状元，当采访他们为什么能取得这样的成绩时无不谈到自己的好习惯。好的习惯一旦养成，就能成为你生活的一部分，融入，生根。常言道习惯成自然就是这个道理。"
-tags: 
+tags:
 - 程序员
 - 想法
 ---
@@ -21,6 +21,17 @@ tags:
 一个人会因自己良好的习惯而受益，会因自己的坏习惯而受害。能过上好的生活，能取得很好的成绩，首要就是养成良好的习惯。有好习惯的人在生活中游刃有余，左右逢源。
 
 **从今天起，养成良好的习惯吧。**
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 –EOF–
 
