--- a/_posts/程序员/2013-05-10-parents.md
+++ b/_posts/程序员/2013-05-10-parents.md
@@ -5,12 +5,23 @@ layout: post
 title: "程序员的奋斗史（十七）父母"
 category: 程序员
 summary: "树欲静而风不止，子欲养而亲不待。世间有几样东西不能等，易逝的时间，孝敬父母的心，邂逅的爱情。"
-tags: 
+tags:
 - 程序员
 - 想法
 ---
 
 `文/robin`
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 **树欲静而风不止，子欲养而亲不待。世间有几样东西不能等，易逝的时间，孝敬父母的心，邂逅的爱情。**
 
@@ -34,6 +45,17 @@ tags:
 这周末（2013年5月12日）是今年的母亲节，拿起电话，给妈妈最衷心的问候和最真诚的祝福吧！
 
 2013年6月16日（周末）是今年的父亲节，拿起电话，给平时很少说话的父亲最好的问候吧！
+
+***
+
+**本站推广**
+
+币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易。
+
+> 币安注册: [https://www.binancezh.com/cn/register/?ref=11190872](https://www.binancezh.com/cn/register/?ref=11190872)
+> 邀请码: **11190872**
+
+***
 
 –EOF–
 
