[Article] Fix typo

--- a/_posts/区块链/2020-03-01-sim-pin.md
+++ b/_posts/区块链/2020-03-01-sim-pin.md
@@ -119,7 +119,7 @@ Mixin Messenger 账号采用手机号 + 短信验证码登录。[Cedric Fung](ht
 
 本文从 zhoujianfu 被 SIM hack 导致巨额损失说起，讲解了 SIM 安全的几个概念，并给出了 SIM 安全的实战和进阶技巧，然后提到 Mixin Messenger 的 D3M-PIN 码设计方案。
 
-您的每一次谨慎，都是加固安全之路的基石。**安全和便利往往都是相悖的，越是觉得平常的地方越有可能疏忽，希望读者能认真审视自己的 SIM 安全。**
+您的每一次谨慎，都是加固安全之路的基石。**安全和便利往往都是相悖的，越是觉得平常的地方越有可能疏忽，希望读者能认真审视自己的 SIM 卡安全。**
 
 ***
 
