[Article] Fix typo

--- a/_posts/区块链/2020-03-01-sim-pin.md
+++ b/_posts/区块链/2020-03-01-sim-pin.md
@@ -4,7 +4,7 @@ author: Robin Wen
 layout: post
 title: SIM 卡 PIN 码，99% 的人都忽略的细节
 category: 区块链
-summary: 北京时间 2 月 22 日上午，一位自称「zhoujianfu」的用户在 Reddit.com 上发帖求救，称自己刚刚丢失了 1547 个比特币和不到 6 万个比特币现金（目前总计价值 2.6 亿元），并 PO 出了自己的地址。币印创始人潘志彪对其签名进行确认，证实「地址确实是他的」。本文从 zhoujianfu 被 SIM hack 导致巨额损失说起，讲解了 SIM 安全的几个概念，并给出了 SIM 安全的实战和进阶技巧，然后提到 Mixin Messenger 的 D3M-PIN 码设计方案。您的每一次谨慎，都是加固安全之路的基石。安全和便利往往都是相悖的，希望读者能认真审视自己的 SIM 安全。
+summary: 北京时间 2 月 22 日上午，一位自称「zhoujianfu」的用户在 Reddit.com 上发帖求救，称自己刚刚丢失了 1547 个比特币和不到 6 万个比特币现金（目前总计价值 2.6 亿元），并 PO 出了自己的地址。币印创始人潘志彪对其签名进行确认，证实「地址确实是他的」。本文从 zhoujianfu 被 SIM hack 导致巨额损失说起，讲解了 SIM 安全的几个概念，并给出了 SIM 安全的实战和进阶技巧，然后提到 Mixin Messenger 的 D3M-PIN 码设计方案。您的每一次谨慎，都是加固安全之路的基石。安全和便利往往都是相悖的，希望读者能认真审视自己的 SIM 卡安全。
 tags:
   - 区块链
   - Blockchain
